env/code_53bf48717a390/stderr.txt
  File "main.py", line 1
    /* write your code below */
    ^
SyntaxError: invalid syntax
